# tako

./: .gitignore  CMakeLists.txt  README.md  pom.xml
TakoLibrary/LibTako/: CMakeLists.txt
TakoLibrary/LibTako/Log/: CMakeLists.txt  Log.cpp
TakoLibrary/LibTako/Log/Tako/Log/: Export.h  Logging.h  Logging.hpp
src/main/cpp/: CMakeLists.txt  main.cc
src/main/cpp/offer/: cc_base-inl.h
src/main/cpp/pattern/behavioral/: observer_pattern.cc  observer_pattern.h
src/main/java/xyz/hzh/pg/: App.java
src/main/java/xyz/hzh/pg/pattern/behavioral/: ObserverPattern.java
src/test/java/xyz/hzh/pg/: AppTest.java
